<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.josesp.hackspace_reto1.UserActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1"
    >

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:background="@color/background"
        android:layout_gravity="center_vertical"
        >

        <ImageView
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/user_icon"
            android:src="@drawable/user" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.6"
        android:orientation="vertical"
        >

        <TextView
            android:paddingTop="0dp"
            android:paddingBottom="10dp"
            android:background="@color/background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/text"
            android:textAlignment="center"
            android:id="@+id/name"
            />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/email"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold"
            />
        
        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/telephone"
            android:textColor="@color/background"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/lblPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/secondary_text"
            android:textSize="16sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/close_sesion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:gravity="bottom"
                android:text="@string/cerrar_sesion"
                android:textAlignment="center"
                android:textSize="15sp" />

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>